--- a/web/src/components/Promotion/Modal/CommentsTree/CommentsTree.css
+++ b/web/src/components/Promotion/Modal/CommentsTree/CommentsTree.css
@@ -6,8 +6,10 @@
 
 .promotion-modal-comments-tree__item {
   display: flex;
+  margin-top: 20px;
 }
 .promotion-modal-comments-tree__item__avatar {
+  border-radius: 49px;
   width: 49px;
   height: 49px;
   margin-right: 15px;
@@ -15,8 +17,32 @@
 
 .promotion-modal-comments-tree__item__info p {
   margin-top: 5px;
+  margin-bottom: 0;
 }
 
 .promotion-modal-comments-tree__item__name {
   font-weight: 600;
+}
+
+.promotion-modal-comments-tree__answer-button {
+  margin-top: 5px;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  color: #3498db;
+}
+
+.promotion-modal-comments-tree__comment-box {
+  margin-top: 10px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.promotion-modal-comments-tree__send-button {
+  margin-left: 15px;
+  background-color: transparent;
+  height: 28px;
+  border-radius: 4px;
+  border: 1px solid #3498db;
+  color: #3498db;
 }
