--- a/web/src/components/Promotion/Card/Card.css
+++ b/web/src/components/Promotion/Card/Card.css
@@ -1,12 +1,11 @@
 .promotion-card {
   border-radius: 8px;
-  border: 1px solid #C3C3C3;
-  box-shadow: 0 2px 7px 0 rgba(0,0,0, 0.15);
+  border: 1px solid #c3c3c3;
+  box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.15);
   display: flex;
   padding: 15px;
   align-items: flex-start;
 }
-
 
 .promotion-card__image {
   max-width: 100px;
@@ -19,13 +18,13 @@
 
 .promotion-card__title {
   font-size: 16px;
-  color: #2C3E50;
+  color: #2c3e50;
 }
 
 .promotion-card__price {
   font-size: 26px;
   font-weight: 700;
-  color: #3498DB;
+  color: #3498db;
 }
 
 .promotion-card__footer {
@@ -34,7 +33,7 @@
 }
 
 .promotion-card__comment {
-  color: #95A5A6;
+  color: #95a5a6;
   font-weight: 700;
   max-width: 345px;
   white-space: nowrap;
@@ -45,26 +44,12 @@
 .promotion-card__comments-count {
   margin-left: auto;
   margin-right: 20px;
-  color: #3498DB;
+  color: #3498db;
   background-color: unset;
   border: unset;
   white-space: nowrap;
 }
 
-.promotion-card__link {
-  border: 1px solid #3498DB;
-  border-radius: 4px;
-  color: #3498DB;
-  text-decoration: none;
-  padding: 8px 10px;
-  white-space: nowrap;
-}
-
 .promotion-card__edit-button {
-  border: 1px solid #3498DB;
-  border-radius: 4px;
-  color: #3498DB;
-  text-decoration: none;
-  padding: 8px 10px;
   margin-left: 10px;
 }
