implement delete button

--- a/web/src/components/Promotion/Card/Card.css
+++ b/web/src/components/Promotion/Card/Card.css
@@ -5,6 +5,7 @@
   display: flex;
   padding: 15px;
   align-items: flex-start;
+  position: relative;
 }
 
 .promotion-card__image {
@@ -52,4 +53,13 @@
 
 .promotion-card__edit-button {
   margin-left: 10px;
+}
+
+.promotion-card__delete-button {
+  border: unset;
+  background-color: unset;
+  font-size: 18px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
